Contact links to be added

--- a/index.html
+++ b/index.html
@@ -918,71 +918,136 @@
                             <div class="col-sm-1 col-md-2 col-lg-3"></div>
                             <div class="col-sm-10 col-md-8 col-lg-6">
                                 <div class="contact-platform">
-                                    <table>
-                                        <!-- Facebook -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="facebook"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @anandni
-                                            </td>
-                                        </tr>
-                                        <!-- Instagram -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="instagram"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                        <!-- Twitter -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="twitter"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                        <!-- Email -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="gmail"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                        <!-- Google-Plus -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="gplus"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                        <!-- Wordpress -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="wordpress"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                        <!-- Medium -->
-                                        <tr class="social-row" onmouseover="onMouseOver()" onmouseout="onMouseOut()">
-                                            <td class="social">
-                                                <a href="#"><i class="fab fa-facebook-square" id="medium"></i></a>
-                                            </td>
-                                            <td class="social-link">
-                                                @nikhil.__.anand
-                                            </td>
-                                        </tr>
-                                    </table>
+
+                                    <div class="container-fluid" id="column-1-contact">
+                                        <div class="row">
+                                            <div class="col-5">
+                                                <table>
+                                                    <!-- Facebook -->
+                                                    <tr title="What's on my mind??" class="social-row"
+                                                        onmouseover="onMouseOver('facebook')"
+                                                        onmouseout="onMouseOut('facebook')">
+                                                        <td class="social">
+                                                            <a class="social-icon icon-to-heading" href="#"><i
+                                                                    class="fab fa-facebook-square"
+                                                                    id="facebook"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="facebook-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- Instagram -->
+                                                    <tr title="Online galleria" class="social-row"
+                                                        onmouseover="onMouseOver('instagram')"
+                                                        onmouseout="onMouseOut('instagram')">
+                                                        <td class="social">
+                                                            <a class="social-icon"><i class="fab fa-instagram"
+                                                                                      id="instagram"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="instagram-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- Twitter -->
+                                                    <tr title="280 chars.. that's all" class="social-row"
+                                                        onmouseover="onMouseOver('twitter')"
+                                                        onmouseout="onMouseOut('twitter')">
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="fab fa-twitter"
+                                                                                               id="twitter"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="twitter-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- LinkedIn -->
+                                                    <tr title="Professional Space" class="social-row"
+                                                        onmouseover="onMouseOver('linkedin')"
+                                                        onmouseout="onMouseOut('linkedin')">
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="fab fa-linkedin"
+                                                                                               id="linkedin"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="linkedin-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                            <div class="col-2"></div>
+                                            <div class="col-5">
+                                                <table>
+                                                    <!-- Email -->
+                                                    <tr title="Mail Me!!" class="social-row"
+                                                        onmouseover="onMouseOver('gmail')"
+                                                        onmouseout="onMouseOut('gmail')">
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="far fa-envelope"
+                                                                                               id="gmail"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="gmail-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- Quora -->
+                                                    <tr title="Ask Me Anything !" class="social-row"
+                                                        onmouseover="onMouseOver('quora')"
+                                                        onmouseout="onMouseOut('quora')">
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="fab fa-quora"
+                                                                                               id="quora"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="quora-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- Wordpress -->
+                                                    <!-- fixme ADD LINK  -->
+                                                    <tr title="Blogs" class="social-row"
+                                                        onmouseover="onMouseOver('wordpress')"
+                                                        onmouseout="onMouseOut('wordpress')">
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="fab fa-wordpress"
+                                                                                               id="wordpress"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="wordpress-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                    <!-- Medium -->
+                                                    <!-- fixme ADD LINK  -->
+                                                    <tr title="Articles" class="social-row"
+                                                        onmouseover="onMouseOver('medium')"
+                                                        onmouseout="onMouseOut('medium')"
+                                                        hidden>
+                                                        <td class="social">
+                                                            <a class="social-icon" href="#"><i class="fab fa-medium"
+                                                                                               id="medium"></i></a>
+                                                        </td>
+                                                        <td class="social-link">
+                                                            <a class="social-link-anchor" href="#" id="medium-link">
+                                                                @nikhil.__.anand
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-sm-1 col-md-2 col-lg-3"></div>
@@ -1027,11 +1092,53 @@
 
 <script>
     function onMouseOver(id) {
-
+        let iconColor = "";
+        let textLink = "";
+        const icon = document.getElementById(id);
+        const link = document.getElementById(id + "-link");
+        switch (id) {
+            case 'facebook':
+                iconColor = "#3b5998";
+                textLink = "#007aff";
+                break;
+            case 'instagram':
+                iconColor = "#bc2a8d";
+                textLink = "#007aff";
+                break;
+            case 'twitter':
+                iconColor = "#00aced";
+                textLink = "#007aff";
+                break;
+            case 'gmail':
+                iconColor = "#D44638";
+                textLink = "#007aff";
+                break;
+            case 'quora':
+                iconColor = "#b52b28";
+                textLink = "#007aff";
+                break;
+            case 'linkedin':
+                iconColor = "#0077b3";
+                textLink = "#007aff";
+                break;
+            case 'wordpress':
+                iconColor = "#207297";
+                textLink = "#007aff";
+                break;
+            case 'medium':
+                iconColor = "#11100e";
+                textLink = "#007aff";
+                break;
+        }
+        icon.style.color = iconColor;
+        link.style.color = textLink;
     }
 
     function onMouseOut(id) {
-
+        const icon = document.getElementById(id);
+        const link = document.getElementById(id + "-link");
+        icon.style.color = "#6b6e73";
+        link.style.color = "#6b6e73";
     }
 </script>
 
