--- a/index.html
+++ b/index.html
@@ -933,9 +933,12 @@
                                                                     id="facebook"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="facebook-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="facebook-link"
+                                                                   href="https://www.facebook.com/anandni/">
+                                                                    @anandni
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- Instagram -->
@@ -947,9 +950,12 @@
                                                                                       id="instagram"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="instagram-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="instagram-link"
+                                                                   href="https://www.instagram.com/nikhil.__.anand/">
+                                                                    @nikhil.__.anand
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- Twitter -->
@@ -957,13 +963,17 @@
                                                         onmouseover="onMouseOver('twitter')"
                                                         onmouseout="onMouseOut('twitter')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#"><i class="fab fa-twitter"
-                                                                                               id="twitter"></i></a>
+                                                            <a class="social-icon" href="#">
+                                                                <i class="fab fa-twitter" id="twitter"></i>
+                                                            </a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="twitter-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="twitter-link"
+                                                                   href="https://twitter.com/anand_nikhil01">
+                                                                    @anand_nikhil01
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- LinkedIn -->
@@ -975,9 +985,15 @@
                                                                                                id="linkedin"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="linkedin-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+
+                                                                <a class="social-link-anchor" id="linkedin-link"
+                                                                   href="https://www.linkedin.co
+                                                                   </m/in/a-nikhil/">
+                                                                    Nikhil Anand<br/>
+                                                                    (a-nikhil)
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -994,9 +1010,12 @@
                                                                                                id="gmail"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="gmail-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="gmail-link"
+                                                                   href="mailto:nikhilanand1006@gmail.com">
+                                                                    nikhilanand@gmail.com
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- Quora -->
@@ -1008,40 +1027,48 @@
                                                                                                id="quora"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="quora-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="quora-link"
+                                                                   href="https://www.quora.com/profile/Nikhil-Anand-112">
+                                                                    Nikhil Anand
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- Wordpress -->
                                                     <!-- fixme ADD LINK  -->
                                                     <tr title="Blogs" class="social-row"
                                                         onmouseover="onMouseOver('wordpress')"
-                                                        onmouseout="onMouseOut('wordpress')">
+                                                        onmouseout="onMouseOut('wordpress')"
+                                                        hidden>
                                                         <td class="social">
                                                             <a class="social-icon" href="#"><i class="fab fa-wordpress"
                                                                                                id="wordpress"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="wordpress-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" href="#"
+                                                                   id="wordpress-link">
+                                                                    @nikhil.__.anand
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                     <!-- Medium -->
-                                                    <!-- fixme ADD LINK  -->
                                                     <tr title="Articles" class="social-row"
                                                         onmouseover="onMouseOver('medium')"
-                                                        onmouseout="onMouseOut('medium')"
-                                                        hidden>
+                                                        onmouseout="onMouseOut('medium')">
                                                         <td class="social">
                                                             <a class="social-icon" href="#"><i class="fab fa-medium"
                                                                                                id="medium"></i></a>
                                                         </td>
                                                         <td class="social-link">
-                                                            <a class="social-link-anchor" href="#" id="medium-link">
-                                                                @nikhil.__.anand
-                                                            </a>
+                                                            <div class="social-link-anchor-div">
+                                                                <a class="social-link-anchor" id="medium-link"
+                                                                   href="https://medium.com/@nikhilanand1006">
+                                                                    Nikhil Anand<br/>(@nikhilanand1006)
+                                                                </a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </table>
