--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <div class="tab-content" id="pills-tabContent">
     <!-- Home -->
-    <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
         <!-- Jumbotron Text -->
         <div class="jumbotron">
             <div class="container-fluid">
@@ -929,7 +929,7 @@
     </div>
 
     <!-- Contact -->
-    <div class="tab-pane fade show active" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-0 col-md-1 col-lg-2"></div>
